# Magic-Mirror

./: .dockerignore  .gitignore  .openclaw-worker-prompt.md  .openclaw-worker-status.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  check_gpu_support.bat  check_gpu_support.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-android.yaml  build-app.yaml  build-server.yaml  build-web.yaml  debug-server.yaml  docker-build.yml  lint.yml
android-app/: build.gradle  gradle.properties  local.properties  settings.gradle
docs/: API.md
scripts/: build-server.sh  build-windows-server.ps1  dist.js  install-server-linux.sh  install-web.sh  install-windows-ort.ps1  run-task-config-cli.py  verify-onnxruntime.py
src/: App.tsx
src-python/: pyproject.toml  requirements-docker.txt  requirements.txt  server.py  web_server.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  utils.rs
tests/: conftest.py  test_dependency_manifests.py  test_frontend_web_server_client.py  test_gpu_provider.py  test_image_task_registry.py  test_install_server_linux.py  test_media_process_timeouts.py  test_server_entrypoint.py  test_task_config.py  test_video_frame_limiter.py  test_video_output_cleanup.py  test_video_output_path.py  test_video_task_executor.py  test_web_server_credentials.py  test_web_server_entrypoint.py  test_web_server_file_lifecycle.py  test_windows_server_launcher.py
(+52 files in other folders)
