[package]
name = "magic"
version = "1.0.0"
description = "Instant AI Face Swap, Hairstyles & Outfits — One click to a brand new you!"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "magic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "=2.0.3"

[dependencies]
tauri = { version = "=2.1.1", features = [
  "macos-private-api",
  "protocol-asset",
  "image-png",
  "devtools",
] }
tauri-runtime = "=2.2.0"
tauri-runtime-wry = "=2.2.0"
tauri-plugin-process = "=2.0.0"
tauri-plugin-shell = "=2.0.0"
tauri-plugin-dialog = "=2.0.0"
tauri-plugin-os = "=2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.9", features = ["stream"] }
zip = "2.2.0"
futures-util = "0.3"
